--- a/views/expertRegistration/authorize.jade
+++ b/views/expertRegistration/authorize.jade
@@ -11,5 +11,5 @@ include header
                 input(name="transaction_id", type="hidden", value="#{transactionID}")
                 .controls
                     input.btn-primary.btn(type="submit", value="Yes, Continue", id="allow")
-                    input.btn.btn-danger(type="submit", value="I don't want to register", name="cancel", id="cancel")
+                    input.btn.btn-danger(type="submit", value="Cancel", name="cancel", id="cancel")
         .col-md-2
