--- a/views/expertRegistration/complete.jade
+++ b/views/expertRegistration/complete.jade
@@ -17,19 +17,58 @@ include header
                             .row#schedules
                                 .col-md-3
                                     .input-group
-                                        input.form-control.timepicker(type='text')
                                         .input-group-btn
-                                            button.btn.btn-default.fa.fa-calendar
+                                            select.form-control
+                                                option 1
+                                                option 2
+                                                option 3
+                                                option 4
+                                                option 5
+                                                option 6
+                                                option 7
+                                                option 8
+                                                option 9
+                                                option 10
+                                                option 11
+                                                option 12
+                                        select.form-control.col-md-1
+                                            option 00
+                                            option 15
+                                            option 30
+                                            option 45
+                                        .input-group-btn
+                                            select.form-control
+                                                option AM
+                                                option PM
                                 .col-md-1.text-center
                                     | to
                                 .col-md-3
                                     .input-group
-                                        input.form-control.timepicker(type='text')
                                         .input-group-btn
-                                            button.btn.btn-default.fa.fa-calendar
+                                            select.form-control
+                                                option 1
+                                                option 2
+                                                option 3
+                                                option 4
+                                                option 5
+                                                option 6
+                                                option 7
+                                                option 8
+                                                option 9
+                                                option 10
+                                                option 11
+                                                option 12
+                                        select.form-control.col-md-1
+                                            option 00
+                                            option 15
+                                            option 30
+                                            option 45
+                                        .input-group-btn
+                                            select.form-control
+                                                option AM
+                                                option PM
                 .form-group
                     input.form-control.btn.btn-primary(type='submit', value='Save')
-
         .col-md-2
 
 #mobileVerificationModal(style='display: none;')
