--- a/views/expertRegistration/mobileVerification.jade
+++ b/views/expertRegistration/mobileVerification.jade
@@ -5,7 +5,7 @@ include scriptsAndStyles
         .col-md-2
         .col-md-8
             p Please verify your mobile number
-            p We'll be calling this number when connecting users to you for scheduled calls
+            em This number will be used to connect the users to you for calls that you accept to receive
             form#sendCode
                 .form-group
                     label Mobile Number
@@ -13,16 +13,16 @@ include scriptsAndStyles
                         .input-group
                             .input-group-btn
                                 select.form-control.col-md-2#countryCode
-                                    option(value='+91') India (+91)
-                                    option(value='+1') USA (+1)
+                                    option(value='91') India (+91)
+                                    option(value='1') USA (+1)
                             input(type='text').form-control#phoneNumber
                 .form-group
                     input.btn.btn-primary.form-control(type='submit', value='Send verification code', name='sendCode')
-            form#verifyCode
-                .form-group#verificationCode(style='display: none;')
-                    label Verification code
-                    input(type='text').form-control
+            form#verifyCode(style='display: none;')
                 .form-group
-                    input.btn.btn-primary.form-control(type='submit', value='Verify', name='verify', style='display: none;')
+                    label Verification code
+                    input(type='text').form-control#verificationCode
+                .form-group
+                    input.btn.btn-primary.form-control(type='submit', value='Verify', name='verify')
         .col-md-2
 script(src='/js/app/expertRegistration/mobileVerification.js')
