--- a/views/expertRegistration/scriptsAndStyles.jade
+++ b/views/expertRegistration/scriptsAndStyles.jade
@@ -7,10 +7,12 @@ script(src='/js/lib/bootstrap.min.js')
 script(src='/js/lib/bootbox.min.js')
 script(src='/js/lib/bootstrap-select.min.js')
 script(src='/js/lib/bootstrap-datepicker.js')
+script(src='/js/lib/bootstrap-timepicker.min.js')
 
 link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-select.min.css')
 link(rel='stylesheet', href='/stylesheets/datepicker.css')
+link(rel='stylesheet', href='/stylesheets/bootstrap-timepicker.min.css')
 link(rel='stylesheet', href='/stylesheets/font-awesome.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
