--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -12,25 +12,25 @@ include scriptsAndStyles
                         input.form-control#title(type='text', name='title')
                     .form-group
                         label(for='first_name') First Name
-                        input.form-control#first_name(type='text', name='first_name', value=user.first_name)
+                        input.form-control#first_name(type='text', name='first_name', value=user.first_name, data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         label(for='last_name') Last Name
-                        input.form-control#last_name(type='text', name='last_name', value=user.last_name)
+                        input.form-control#last_name(type='text', name='last_name', value=user.last_name, data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         label(for='short_desc') Summary
-                        input.form-control#short_desc(type='text', name='short_desc', value=user.short_desc, autocomplete='off')
+                        input.form-control#short_desc(type='text', name='short_desc', value=user.short_desc, autocomplete='off', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         label(for='long_desc') Description
-                        textarea.form-control#long_desc(name='long_desc') #{user.long_desc}
+                        textarea.form-control#long_desc(name='long_desc', data-toggle="tooltip", data-placement="bottom") #{user.long_desc}
                     .form-group
                         label(for='revenue_share') Revenue Share
                         .form-control-static#revenue_share= formatMoney(member.revenue_share, member.revenue_share_unit)
                     .form-group
                         label(for='password') Password
-                        input.form-control#password(type='password', name='password')
+                        input.form-control#password(type='password', name='password', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         label(for='confirm_password') Confirm Password
-                        input.form-control#confirm_password(type='password', name='confirm_password')
+                        input.form-control#confirm_password(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         input.form-control.btn.btn-primary(type='submit') Save Changes
             .col-md-2
