--- a/views/dashboard/integrationCoupons.jade
+++ b/views/dashboard/integrationCoupons.jade
@@ -6,7 +6,8 @@ title User Management - #{integration.title}
         .col-md-2
         .col-md-8
             .navbar.navbar-default
-                .container-fluid
+                .container
+                    a.navbar-brand(href='/integrations') Back
                     .collapse.navbar-collapse
                         ul.nav.navbar-nav
                             li
