--- a/views/dashboard/integrations.jade
+++ b/views/dashboard/integrations.jade
@@ -5,6 +5,7 @@ include header
     .row-fluid
         .col-md-2
         .col-md-8
+            h4 Your Integrations
             .list-group
                 each member in members
                     a.list-group-item(href=member.role == 3 ? '/member/' + member.id + '/profile' : '/integration/' + member.integration_id + '/members') #{member.integration.title}
