--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -5,11 +5,14 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
         .col-md-2
         .col-md-8
             .row
-                .col-md-6
-                    h3 SearchNTalk Dashboard
-                .pull-right
-                    if (logged_in_user)
-                        | Hey #{logged_in_user.first_name}
-                        a.btn.btn-link(href='/logout') Logout
+                .col-md-7
+                    h3
+                        | SearchNTalk
+                        small &nbsp;Alpha
+                .col-md-5
+                    p.pull-right
+                        if (logged_in_user)
+                            | Hey #{logged_in_user.first_name}
+                            a.btn.btn-link(href='/logout') Logout
         .col-md-2
 hr
