Delete invite code after login Delete invite code after login

--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -30,7 +30,7 @@ include scriptsAndStyles
                         input.form-control#password(type='password', name='password', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         label(for='confirm_password') Confirm Password
-                        input.form-control#confirm_password(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom")
+                        input.form-control#confirm_password(type='password', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         input.form-control.btn.btn-primary(type='submit') Save Changes
             .col-md-2
