Delete invite code after login Delete invite code after login Delete invite code after login

--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -19,4 +19,5 @@ include scriptsAndStyles
                         //    | Remember me
                         input.btn.btn-primary(type='submit', value='Login')
         .col-md-2
+include footer
 script(src='/js/app/dashboard/login.js')
