--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -35,6 +35,7 @@ include scriptsAndStyles
                         input.form-control.btn.btn-primary(type='submit') Save Changes
             .col-md-2
         .col-md-2
+
 script.
-    var memberId = !{member.id}
+    var memberId = !{member.id};
 script(src='/js/app/dashboard/memberProfile.js')
