Delete invite code after login Delete invite code after login Delete invite code after login

--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -35,7 +35,7 @@ include scriptsAndStyles
                         input.form-control.btn.btn-primary(type='submit') Save Changes
             .col-md-2
         .col-md-2
-
+include footer
 script.
     var memberId = !{member.id};
 script(src='/js/app/dashboard/memberProfile.js')
