Added minify, uglify for assets

--- a/views/dashboard/integrationUsers.jade
+++ b/views/dashboard/integrationUsers.jade
@@ -1,6 +1,6 @@
 title User Management - #{integration.title}
 include header
-include scriptsAndStyles
+include ../scriptsAndStyles
 .container-fluid
     .row-fluid
         .col-md-2
