--- a/views/expertRegistration/authenticate.jade
+++ b/views/expertRegistration/authenticate.jade
@@ -1,5 +1,5 @@
 title Search N Talk - Expert Registration - Login
-include scriptsAndStyles
+include ../scriptsAndStyles
 include header
 .container-fluid
     .row-fluid
