--- a/views/dashboard/integrationCoupons.jade
+++ b/views/dashboard/integrationCoupons.jade
@@ -1,5 +1,5 @@
 include header
-include scriptsAndStyles
+include ../scriptsAndStyles
 title User Management - #{integration.title}
 .container-fluid
     .row-fluid
