--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -4,36 +4,55 @@ include ../scriptsAndStyles
     .row-fluid
         .col-md-2
         .col-md-8
-            .col-md-2
-            .col-md-4
-                form
+            .col-md-3
+                img.img-polaroid.col-md-12(src='http://www.777icons.com/libs/love/no_photo-icon.gif')
+                form#fileUploadForm(action='/rest/user/' + logged_in_user.id + '/picture', method="post", enctype="multipart/form-data")
+                    input#selectFile(type='file', name='profile', style='display: none')
+                    input#selectFileSubmit(type='submit', style='display: none')
+                    .text-center
+                        a.btn.btn-default.btn-xs#selectFileBtn Upload
+            .col-md-9
+                form.form-horizontal
+                    .row
+                        .form-group.col-md-2
+                            label(for='title').control-label Title
+                            select#title(name='title', data-width='auto')
+                                option Mr.
+                                option Mrs.
+                                option Ms.
+                                option Dr.
+                                option Prof.
+                                option Gen.
+                                option St.
+                        .form-group.col-md-3
+                            label.control-label(for='first_name') First Name
+                            input.form-control#first_name(type='text', name='first_name', value=user.first_name, data-toggle="tooltip", data-placement="bottom")
+                        .form-group.col-md-3
+                            label.control-label(for='middle_name') Middle Name
+                            input.form-control#middle_name(type='text', name='middle_name', value=user.midle_name, data-toggle="tooltip", data-placement="bottom")
+                        .form-group.col-md-3
+                            label.control-label(for='last_name') Last Name
+                            input.form-control#last_name(type='text', name='last_name', value=user.last_name, data-toggle="tooltip", data-placement="bottom")
+                    hr
                     .form-group
-                        label(for='title') Title
-                        input.form-control#title(type='text', name='title')
-                    .form-group
-                        label(for='first_name') First Name
-                        input.form-control#first_name(type='text', name='first_name', value=user.first_name, data-toggle="tooltip", data-placement="bottom")
-                    .form-group
-                        label(for='last_name') Last Name
-                        input.form-control#last_name(type='text', name='last_name', value=user.last_name, data-toggle="tooltip", data-placement="bottom")
-                    .form-group
-                        label(for='short_desc') Summary
+                        label.control-label(for='short_desc') Summary
                         input.form-control#short_desc(type='text', name='short_desc', value=user.short_desc, autocomplete='off', data-toggle="tooltip", data-placement="bottom")
                     .form-group
-                        label(for='long_desc') Description
+                        label.control-label(for='long_desc') Description
                         textarea.form-control#long_desc(name='long_desc', data-toggle="tooltip", data-placement="bottom") #{user.long_desc}
+                    hr
                     .form-group
-                        label(for='revenue_share') Revenue Share
+                        label.control-label(for='revenue_share') Revenue Share
                         .form-control-static#revenue_share= formatMoney(member.revenue_share, member.revenue_share_unit)
                     .form-group
-                        label(for='password') Password
+                        label.control-label(for='password') Password
                         input.form-control#password(type='password', name='password', data-toggle="tooltip", data-placement="bottom")
+                    hr
                     .form-group
-                        label(for='confirm_password') Confirm Password
+                        label.control-label(for='confirm_password') Confirm Password
                         input.form-control#confirm_password(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom")
                     .form-group
                         input.form-control.btn.btn-primary(type='submit', value='Save Changes')
-            .col-md-2
         .col-md-2
 script.
     var memberId = !{member.id}
