--- a/views/expertRegistration/authenticate.jade
+++ b/views/expertRegistration/authenticate.jade
@@ -5,7 +5,7 @@ include header
     .row-fluid
         .col-md-2
         .col-md-8
-            include errorMessage
+            include ../errorMessage
             .row-fluid
                 em Note: We've pre-filled some of the fields based on the invitation for your convenience
             hr
