--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -5,6 +5,7 @@ include ../scriptsAndStyles
     .row-fluid
         .col-md-2
         .col-md-8
+            include ../errorMessage
             .col-md-4
                 form#login-form(role='form', action='/login', method='post')
                     .form-group
