Removed options from basedao search and find Call flow is one page with redirect to login
Merge branch 'master' into alpha-calling

Conflicts:
	api/TokenApi.ts
	delegates/SMSDelegate.ts
	delegates/UserDelegate.ts
	routes/callFlow/CallFlowRoute.ts
	routes/expertRegistration/ExpertRegistrationRoute.ts
	views/expertRegistration/authorize.jade

--- a/views/callFlow/details.jade
+++ b/views/callFlow/details.jade
@@ -10,11 +10,6 @@ include header
             .form-horizontal
                 .form-group
                     .control-label
-                        | Duration
-                    .controls
-                        input(type='text')
-                .form-group
-                    .control-label
                         | Your phone number&nbsp;
                         a.icon-question-sign.tooltips(href='#', data-toggle="tooltip", data-placement="right", title="You'll receive a call on this number for talking to the expert")
                     .controls
@@ -33,7 +28,7 @@ include header
                     .col-md-2
                         label
                             | Duration:&nbsp;
-                            span.duration 15
+                            span.duration {{}}
                             | &nbsp;minutes
                     .pull-right
                         label
