--- a/views/expertRegistration/mobileVerification.jade
+++ b/views/expertRegistration/mobileVerification.jade
@@ -16,6 +16,7 @@ include ../scriptsAndStyles
                                 select.form-control.col-md-2#countryCode
                                     option(value='91') India (+91)
                                     option(value='1') USA (+1)
+                                    option(value='65') Singapore(+65)
                             input(type='text').form-control#phoneNumber
                 .form-group
                     input.btn.btn-primary.form-control(type='submit', value='Send verification code', name='sendCode')
