Back links on profile pages q.all used in dashboard

--- a/views/dashboard/memberEmployment.jade
+++ b/views/dashboard/memberEmployment.jade
@@ -5,6 +5,7 @@ include ../scriptsAndStyles
         .col-md-2
         .col-md-8
             .navbar.navbar-default
+                a.navbar-brand(href=DashboardUrls.integrationMembers(member.integration_id)) Back
                 .container
                     .collapse.navbar-collapse
                         ul.nav.navbar-nav
