--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -6,6 +6,7 @@ include ../scriptsAndStyles
         .col-md-8
             .navbar.navbar-default
                 .container
+                    a.navbar-brand(href=DashboardUrls.integrationMembers(member.integration_id)) Back
                     .collapse.navbar-collapse
                         ul.nav.navbar-nav
                             li.active
